--- a/maxonts/src/sidebar.html
+++ b/maxonts/src/sidebar.html
@@ -1,10 +1,16 @@
 <template>
+  <div class ="sidebar">
   <h1 class="sidebar-title"> MAXON </h1>
-
-  <div class="d-flex flex-column">
-    <a route-href="loans"> Prestamos </a>
-    <a route-href="returns"> Devoluciones </a>
-    <a route-href="inventory"> Inventario </a>
+  <div class="d-flex flex-column sidebar_container">
+    <a class="sidebar_loans"route-href="loans"> Prestamos </a>
+    <a class ="sidebar_returns" route-href="returns"> Devoluciones </a>
+    <a class= "sidebar_consults"route-href="inventory"> Inventario </a>
+    <a class= "sidebar_consults"route-href="history"> Historial  de Prestamos </a>
+    <a class= "sidebar_consults"route-href="orders"> Pedidos </a>
+    <a class= "sidebar_modifications"route-href="maintenance"> Mantenimiento </a>
+    <a class= "sidebar_modifications"route-href="up_downs"> Altas/Bajas </a>
+    <a class= "sidebar_modifications"route-href="inventory"> Entrada/Salida </a>
+  </div>
   </div>
 
 </template>
