--- a/maxonts/src/sidebar.html
+++ b/maxonts/src/sidebar.html
@@ -1,6 +1,6 @@
 <template>
   <div class ="sidebar">
-  <h1 class="sidebar-title"> MAXON </h1>
+  <h1 class="sidebar-title" route-href="test"> MAXON </h1>
   <div class="d-flex flex-column sidebar_container">
     <a class="sidebar_loans"route-href="loans"> Prestamos </a>
     <a class ="sidebar_returns" route-href="returns"> Devoluciones </a>
