--- a/maxonts/src/screens/returns/returns.html
+++ b/maxonts/src/screens/returns/returns.html
@@ -1,16 +1,25 @@
 <template>
-  <h2> Devoluciones </h2>
+  <h2> Información de Prestamo </h2>
 
-  <form submit.delegate="search()">
-
-    <div class="mb-3">
+   <div class="mb-3 filters">
       <label for="exampleFormControlInput1" class="form-label"># De Empleado
-      </label>
+      
       <input type="text" class="form-control" id="exampleFormControlInput1"
         value.bind="param">
+        </label>
+        <label for="Status">Estado
+        <select name="status" id="stats">
+          <option value="Entregado">Entregado</option>
+          <option value="Entrega Parcial">Entrega Parcial</option>
+          <option value="No Entregado">No Entregado</option>
+        </select>
+      </label> 
+        <label for="exampleFormControlInput1" class="form-label"> Rango - Fechas
+      
+      <input type="text" class="form-control" id="exampleFormControlInput3"
+        value.bind="param">
+      </label>
     </div>
-    <button class="btn btn-primary" type="submit">Buscar</button>
-  </form>
 
   <h2> Resultados </h2>
 
@@ -27,7 +36,7 @@
     </thead>
     <tbody>
       <tr repeat.for="record of returns">
-        <td>${record.loanNo}</td>
+        <td><a route-href="route: loanInfo; params.bind: {id:record.loanNo, readOnly:'1'}">${record.loanNo}</a></td>
         <td>${record.employeeNo}</td>
         <td>${record.status}</td>
         <td>${record.lentBy}</td>
