--- a/maxonts/src/screens/up_downs/up_downs.html
+++ b/maxonts/src/screens/up_downs/up_downs.html
@@ -1,10 +1,83 @@
 <template>
   <h2>Altas Bajas</h2>
   <label> Tipo de Movimiento
-  <select name="type" value.bind="upper" id="type">
-        <option model.bind="true">Altas</option>
-        <option model.bind="false">Bajas</option>
-      </select>
+    <select name="type" value.bind="up" id="type">
+      <option model.bind="true">Altas</option>
+      <option model.bind="false">Bajas</option>
+    </select>
   </label>
-  
+  <br>
+  <div if.bind="up">
+    <form>
+      <Button click.delegate="addUp()">Añadir +</Button>
+      <div repeat.for="i of ups.length">
+        <div class="mb-3 filters">
+          <label class="form-label"># Parte
+            <input type="text" value.bind="ups[i]['idParte']" class="form-control">
+          </label>
+
+          <label class="form-label">Familia
+            <input type="text" value.bind="ups[i]['Familia']" class="form-control">
+          </label>
+
+
+          <label class="form-label">Nombre/Descripcion
+            <input type="text" value.bind="ups[i]['Descripcion']" class="form-control">
+          </label>
+
+        </div>
+
+        <div class="mb-3 filters">
+          <label class="form-label">Seccion/Locker
+            <input type="text" value.bind="ups[i]['Seccion']" class="form-control">
+          </label>
+
+
+
+          <label class="form-label">Stock Minimo
+            <input type="text" value.bind="ups[i]['Minimo']" class="form-control">
+          </label>
+
+
+          <label class="form-label">Stock Maximo
+            <input type="text" value.bind="ups[i]['Maximo']" class="form-control">
+          </label>
+          <label>Eliminar
+            <input class="form-check-input" change.delegate="removeUp(i)" type="checkbox" id="inlineCheckbox2">
+          </label>
+        </div>
+        <button click.delegate="commit()">Guardar Cambios</button>
+    </form>
+  </div>
+
+
+  <div if.bind="!up">
+    <form>
+      <Button click.delegate="addDown()">Añadir +</Button>
+      <div repeat.for="i of down.length">
+
+        <div class="mb-3 filters">
+          <label class="form-label"># Parte
+            <input type="text" value.bind="down[i]['idParte']" class="form-control">
+          </label>
+          <label class="form-label">Buscar
+            <button class="form-control"></button>
+          </label>
+        </div>
+
+        <div class="mb-3 filters">
+          <label class="form-label">Familia
+            <input type="text" value.bind="ups[i]['Familia']" class="form-control">
+          </label>
+
+
+          <label class="form-label">Nombre/Descripcion
+            <input type="text" value.bind="ups[i]['Descripcion']" class="form-control">
+          </label>
+          <label>Eliminar
+            <input class="form-check-input" change.delegate="removeDown(i)" type="checkbox" id="inlineCheckbox2">
+          </label>
+        </div>
+    </form>
+  </div>
 </template>
