--- a/maxonts/src/sidebar.html
+++ b/maxonts/src/sidebar.html
@@ -9,7 +9,7 @@
     <a class= "sidebar_consults"route-href="orders"> Pedidos </a>
     <a class= "sidebar_modifications"route-href="maintenance"> Mantenimiento </a>
     <a class= "sidebar_modifications"route-href="up_downs"> Altas/Bajas </a>
-    <a class= "sidebar_modifications"route-href="inventory"> Entrada/Salida </a>
+    <a class= "sidebar_modifications"route-href="inOut"> Entrada/Salida </a>
   </div>
   </div>
 
