--- a/maxonts/src/screens/up_downs/up_downs.html
+++ b/maxonts/src/screens/up_downs/up_downs.html
@@ -46,10 +46,10 @@
             <input class="form-check-input" change.delegate="removeUp(i)" type="checkbox" id="inlineCheckbox2">
           </label>
         </div>
+        </div>
         <button click.delegate="commit()">Guardar Cambios</button>
     </form>
   </div>
-
 
   <div if.bind="!up">
     <form>
@@ -77,7 +77,14 @@
           <label>Eliminar
             <input class="form-check-input" change.delegate="removeDown(i)" type="checkbox" id="inlineCheckbox2">
           </label>
-        </div>
+          </div>
+          
+      </div>
+      <button click.delegate="commitDown()">Guardar Cambios</button>
     </form>
+    
   </div>
+
+
+  
 </template>
