Integracion con el baken

--- a/maxonts/src/screens/employees/info.html
+++ b/maxonts/src/screens/employees/info.html
@@ -6,23 +6,23 @@
       <div>
         <div class="mb-3">
           <label for="employeeid" class="form-label">Empleado Id</label>
-          <input type="text" class="form-control" value.bind="Empleado">
+          <input type="text" class="form-control" value.bind="data['idEmpleado']">
         </div>
   
         <div class="mb-3">
           <label for="job" class="form-label">Nombre</label>
-          <input type="text" class="form-control">
+          <input type="text" value.bind="data['nombre']" class="form-control">
         </div>
   
         <div class="mb-3">
           <label for="machine" class="form-label">Estatus</label>
-          <input type="text" class="form-control">
+          <input type="text" value.bind="data['status']" class="form-control">
         </div>
       </div>
   
       <div class="mb-3">
         <label for="employeeid" class="form-label">Area</label>
-        <input type="text" class="form-control">
+        <input type="text" value.bind="data['area']" class="form-control">
       </div>
     
 </template>
