--- a/maxonts/src/screens/item/item_info.html
+++ b/maxonts/src/screens/item/item_info.html
@@ -5,32 +5,32 @@
   
       <div>
         <div class="mb-3">
-          <label for="employeeid" class="form-label">id Herramienta</label>
-          <input type="text" class="form-control" value.bind="idItem">
+          <label for="employeeid" class="form-label"># Parte</label>
+          <input type="text" class="form-control" value.bind="data[0]['idParte']">
         </div>
   
         <div class="mb-3">
           <label for="job" class="form-label">Familia</label>
-          <input type="text" class="form-control">
+          <input type="text" value.bind="data[0]['Familia']" class="form-control">
         </div>
   
         <div class="mb-3">
           <label for="machine" class="form-label">Nombre/Descripcion</label>
-          <input type="text" class="form-control">
+          <input type="text" value.bind="data[0]['Descripcion']" class="form-control">
         </div>
       </div>
   
       <div class="mb-3">
         <label for="employeeid" class="form-label">Stock Minimo</label>
-        <input type="text" class="form-control">
+        <input type="text" value.bind="data[0]['Minimo']" class="form-control">
       </div>
       <div class="mb-3">
         <label for="employeeid" class="form-label">Stock Maximo</label>
-        <input type="text" class="form-control">
+        <input type="text" value.bind="data[0]['Maximo']" class="form-control">
       </div>
       <div class="mb-3">
         <label for="employeeid" class="form-label">Estado</label>
-        <input type="text" class="form-control">
+        <input type="text" value.bind="data[0]['activo']" class="form-control">
       </div>
     
 </template>
