--- a/maxonts/src/screens/inventory/inventory.html
+++ b/maxonts/src/screens/inventory/inventory.html
@@ -19,6 +19,7 @@
     <thead>
       <tr>
         <th scope="col"># Parte</th>
+        <th scope="col">Tipo</th>
         <th scope="col">Familia</th>
         <th scope="col">Nombre</th>
         <th scope="col">Minimo</th>
@@ -29,13 +30,14 @@
     </thead>
     <tbody>
       <tr repeat.for="record of items">
-        <td><a route-href="route: partInfo; params.bind :{partNo:record.partNo}">${record.partNo}</a></td>
-        <td>${record.family}</td>
-        <td>${record.name}</td>
-        <td>${record.minimum}</td>
-        <td>${record.maximum}</td>
-        <td>${record.loaned || '-'}</td>
-        <td>${record.available}</td>
+        <td><a route-href="route: partInfo; params.bind :{partNo:record.hash}">${record.idParte}</a></td>
+        <td>${record.Tipo}</td>
+        <td>${record.Familia}</td>
+        <td>${record.Descripcion}</td>
+        <td>${record.Minimo}</td>
+        <td>${record.Maximo}</td>
+        <td>${record.Prestados}</td>
+        <td>${record.Disponibles}</td>
       </tr>
     </tbody>
   </table>
