--- a/maxonts/src/screens/loan_history/history.html
+++ b/maxonts/src/screens/loan_history/history.html
@@ -40,11 +40,11 @@
     </thead>
     <tbody>
       <tr repeat.for="record of returns">
-        <td ><a route-href="route: loanInfo; params.bind: {id:record.loanNo, readOnly:'0'}">${record.loanNo}</a></td>
-        <td>${record.employeeNo}</td>
+        <td ><a route-href="route: loanInfo; params.bind: {id:record.idPrestamo, readOnly:'0'}">${record.idPrestamo}</a></td>
+        <td>${record.idEmpleado}</td>
         <td>${record.status}</td>
-        <td>${record.lentBy}</td>
-        <td>${record.date - 100}</td>
+        <td>${record.idUsuario}</td>
+        <td>${record.fecha}</td>
       </tr>
     </tbody>
   </table>
