push para david

--- a/maxonts/src/screens/loans/loans.html
+++ b/maxonts/src/screens/loans/loans.html
@@ -5,14 +5,10 @@
     <div>
       <div class="mb-3 filters">
         <label for="employeeid" class="form-label">Empleado Id
-          <input type="text" value.bind="empleado"class="form-control"></label>
-
-
+          <input type="text" value.bind="empleado" class="form-control"></label>
 
         <label for="job" class="form-label">Job
           <input type="text" value.bind="job" class="form-control"></label>
-
-
 
         <label for="machine" class="form-label">Maquina
           <input type="text" value.bind="maquina" class="form-control"></label>
@@ -20,50 +16,53 @@
     </div>
     <button click.delegate="add(1)"> Añadir Consumible</button>
 
-    <div if.bind="consumibles.length>=1">
-      <h2>Consumibles</h2>
-      <div repeat.for="i of consumibles.length">
+    <div if.bind="consumibles.length>=1" class="container">
+      <h3>Consumibles</h3>
+      <div repeat.for="i of consumibles.length" class="container">
         <div>
-          <div class="mb-3 filters">
-            <label for="partno" class="form-label"># Consumible
-              <input type="text" input.delegate="updateData(i,1)" value.bind="consumibles[i]['idConsumible']" class="form-control"></label>
-            <label for="partno" class="form-label"># Parte
-              <input type="text" value.bind="consumibles[i]['idParte']" class="form-control"></label>
-
-            <label for="quantity" class="form-label">Cantidad
-              <input type="text" value.bind="consumibles[i]['cantidad']" class="form-control"></label>
-
-              <label>Eliminar
-                <input class="form-check-input" change.delegate="remove(i,1)" type="checkbox" >
-              </label>
+          <div class="filters">
+            <label for="partno" class="form-label">
+              # Consumible
+              <input type="text" input.delegate="updateData(i,1)" value.bind="consumibles[i]['idConsumible']" class="form-control">
+            </label>
+            <label for="partno" class="form-label">
+              # Parte
+              <input type="text" value.bind="consumibles[i]['idParte']" class="form-control">
+            </label>
+            <label for="quantity" class="form-label">
+              Cantidad
+              <input type="text" value.bind="consumibles[i]['cantidad']" class="form-control">
+            </label>
+            <label>
+              Eliminar
+              <input class="form-check-input" change.delegate="remove(i,1)" type="checkbox">
+            </label>
           </div>
-        </div>
-
-        <div>
-          Condición de Cambio
-
-          <div class="mb-3">
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" change.delegate="setcondition(i,0)"  checked.bind="consumibles[i]['condicion']==0"
-                value=0>
-              <label class="form-check-label" >No
-                aplica</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" change.delegate="setcondition(i,1)"  checked.bind="consumibles[i]['condicion']==1"
-                 value=1>
-              <label class="form-check-label" >No
-                Regreso</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" change.delegate="setcondition(i,2)"  checked.bind="consumibles[i]['condicion']==2"
-                 value=2>
-              <label class="form-check-label" >Cambio</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" change.delegate="setcondition(i,3)"  checked.bind="consumibles[i]['condicion']==3"
-                 value=3>
-              <label class="form-check-label" >Dañado</label>
+          <div>
+            Condición de Cambio
+            <div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" change.delegate="setcondition(i,0)"
+                  checked.bind="consumibles[i]['condicion']==0" value=0>
+                <label class="form-check-label">No
+                  aplica</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" change.delegate="setcondition(i,1)"
+                  checked.bind="consumibles[i]['condicion']==1" value=1>
+                <label class="form-check-label">No
+                  Regreso</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" change.delegate="setcondition(i,2)"
+                  checked.bind="consumibles[i]['condicion']==2" value=2>
+                <label class="form-check-label">Cambio</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" change.delegate="setcondition(i,3)"
+                  checked.bind="consumibles[i]['condicion']==3" value=3>
+                <label class="form-check-label">Dañado</label>
+              </div>
             </div>
           </div>
         </div>
@@ -71,27 +70,28 @@
     </div>
 
     <button click.delegate="add(0)">Añadir Herramienta </button>
-    <div if.bind="herramientas.length>=1">
-      <h4>herramientas</h4>
-      <div repeat.for="i of herramientas.length">
+    <div if.bind="herramientas.length>=1" class="container">
+      <h3>Herramientas</h3>
 
+      <div repeat.for="i of herramientas.length" class="container">
         <div>
           <div class="mb-3 filters">
             <label for="partno" class="form-label"># Herramienta
-            <input type="text" input.delegate="updateData(i,0)" class="form-control"></label>
-          
+              <input type="text" input.delegate="updateData(i,0)" class="form-control"></label>
+
             <label for="quantity" class="form-label"># Parte
-            <input type="text" class="form-control"></label>
+              <input type="text" class="form-control"></label>
             <label>Eliminar
-              <input class="form-check-input" change.delegate="remove(i,0)" type="checkbox" >
+              <input class="form-check-input" change.delegate="remove(i,0)" type="checkbox">
             </label>
           </div>
         </div>
       </div>
+
     </div>
 
 
-    <button type="submit" click.delegate="commit()"class="btn btn-primary"> Prestar </button>
+    <button type="submit" click.delegate="commit()" class="btn btn-primary"> Prestar </button>
 
   </form>
 
