--- a/maxonts/src/sidebar.html
+++ b/maxonts/src/sidebar.html
@@ -1,4 +1,5 @@
 <template>
+  <div class="mock_sidebar"></div>
   <div class ="sidebar">
   <h1 class="sidebar-title" route-href="test"> MAXON </h1>
   <div class="d-flex flex-column sidebar_container">
