--- a/maxonts/src/screens/maintenance/maintenance.html
+++ b/maxonts/src/screens/maintenance/maintenance.html
@@ -67,4 +67,7 @@
             </li>
           </div>
 
+          <button click.delegate="commit()" class ="btn btn-secondary"type="submit" name="action"> Registrar Mantenimiento</button>
+          
+
 </template>
